fix spline scene cropping issue

--- a/vaishnavsh/src/components/Home/Home.scss
+++ b/vaishnavsh/src/components/Home/Home.scss
@@ -7,6 +7,7 @@
     .left {
         margin-top: 15%;
         margin-bottom: 15%;
+        margin-left: 7%;
         // position: relative;
         // left: 7rem;
         // width: 40%;
